--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(lldb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/Users/vbaron/Desktop/Cub3d-vectors/Cub3d",
-            "args": ["map.cub"],
+            "program": "/Users/vincentbaron/Desktop/Cub3d-vectors/Cub3d",
+            "args": ["--save", "map.cub"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
