--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -22,18 +22,15 @@ SRC			=	ft_atoi.c    			\
 				ft_strncmp.c 			\
 				ft_bzero.c   			\
 				ft_split.c 				\
-				ft_calloc.c  			\
 				ft_isalnum.c 			\
 				ft_isalpha.c 			\
 				ft_isascii.c 			\
 				ft_isdigit.c 			\
 				ft_isprint.c 			\
-				ft_itoa.c    			\
 				ft_memset.c  			\
 				ft_memcpy.c 			\
 				ft_memchr.c 			\
 				ft_memccpy.c			\
-				ft_memmove.c			\
 				ft_memcmp.c				\
 				ft_putchar_fd.c 		\
 				ft_putendl_fd.c 		\
@@ -42,7 +39,6 @@ SRC			=	ft_atoi.c    			\
 				ft_strchr.c				\
 				ft_strjoin.c 			\
 				ft_strlen.c  			\
-				ft_strmapi.c 			\
 				ft_strncmp.c 			\
 				ft_strrchr.c 			\
 				ft_substr.c  			\
@@ -51,15 +47,9 @@ SRC			=	ft_atoi.c    			\
 				ft_strnstr.c 			\
 				check_charset.c			\
 
-SRC_BONUS	=	ft_lstnew.c		\
-				ft_lstsize.c		\
-				ft_lstadd_front.c	\
-				ft_lstadd_back.c	\
+SRC_BONUS	=	ft_lstadd_front.c	\
 				ft_lstlast.c		\
 				ft_lstdelone.c	\
-				ft_lstclear.c		\
-				ft_lstiter.c		\
-				ft_lstmap.c		\
 
 
 #	Includes
